--- a/program/index.html
+++ b/program/index.html
@@ -12,59 +12,60 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="header-top">
-            <nav>
-                <ul class="left-menu">
-                    <li><img src="..//weather/img/menu_icon_16819.jpg" alt=""></li>
-                    <li><a href=""></a> Tour</li>
-                    <li><a href=""></a> Features</li>
-                    <li><a href=""></a> Pricing</li>
+            <nav class="header__menu">
+                <ul class="header__list">     
+                    <li class="header__item"><a class="header__link" href="">Tour</a></li>
+                    <li class="header__item"><a class="header__link" href="">Features</a></li>
+                    <li class="header__item"><a class="header__link" href="">Pricing</a></li>
                 </ul>
             </nav>
 
-            <img src="..//weather/img/newprovidence_16869.jpg" alt="">
+            <img class="header__logo" src="..//program/img/newprovidence.jpg" alt="">
 
-            <div class="right-menu">
-                <ul>
-                    <li><a href="">Help</a></li>
-                    <li><a href="">Contacts</a></li>
-                    <li><a href=""><button>Get App</button></a></li>
-                </ul>
+            <div class="header__right-menu">
+                <div class="header__information">
+                    <ul class="header__list">
+                        <li class="header__item--opacity"><a class="header__link--opacity" href="">Help</a></li>
+                        <li class="header__item"><a class="header__link" href="">Contacts</a></li>
+                        <button class="header__btn">Get App</button>
+                    </ul>  
+                </div>
             </div> 
         </div>
 
-        <h1>What happens tomorrow?</h1>
+        <h1 class="header__title">What happens tomorrow?</h1>
 
-        <p>The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his
+        <p class="header__text">The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his
             interview with his landlady. His face brightened up, and he began to feel quite convivial.</p>
 
-        <button>Watch Video</button>
+        <button class="header__btn-head">Watch Video</button>
 
     </header>
 
-    <section class="information">
+    <section class="testimonials">
 
-        <div class="information__first-block">
-            <img src="" alt="">
+        <div class="testimonials__block">
+            <img class="" src="" alt="">
 
-            <h3>Real-time all the time</h3>
+            <h3 class="testimonials__title">Real-time all the time</h3>
 
-            <p>Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
+            <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
 
-            <p>Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and
+            <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and
                 she at once took up the little golden key and hurried off to the garden door.</p>
         </div>
 
-        <div class="information__second-block">
+        <div class="testimonials__block">
             <img src="" alt="">
 
-            <h3>Adopt without any obstacles</h3>
+            <h3 class="testimonials__block">Adopt without any obstacles</h3>
 
-            <p>This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that
+            <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that
                 before!' she said.</p>
 
-            <p>This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such
+            <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such
                 abstruse matters.</p>
         </div>
 
@@ -72,21 +73,21 @@
 
     <section class="about">
 
-        <div class="about__image">
-            <img src="..//weather/img/iphone_6.jpg" alt="">
+        <div class="about__box">
+            <img class="about__img" src="..//program/img/iphone_6.jpg" alt="">
         </div>
 
         <div class="about__content">
-            <h2>Your day is protected</h2>
+            <h2 class="about__title">Your day is protected</h2>
 
-            <p>There have not been any since we have lived here, said my mother. </p>
+            <p class="about__txt">There have not been any since we have lived here, said my mother. </p>
 
-            <p>We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones,
+            <p class="about__txt">We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones,
                 and the birds have deserted them a long while.</p>
 
-            <button>Try to hack us</button>
+            <button class="about__btn">Try to hack us</button>
 
-            <a href="">Learn more</a>
+            <a class="about__link" href="">Learn more</a>
         </div>
 
     </section>
@@ -94,22 +95,22 @@
     <section class="location">
 
         <div class="location__content">
-            <h2>We are almost everywhere</h2>
+            <h2 class="location__title">We are almost everywhere</h2>
 
-            <p>Now the races of these two have been for some ages utterly extinct, and besides to discourse any
+            <p class="location__txt">Now the races of these two have been for some ages utterly extinct, and besides to discourse any
                 further of them would not be at all to my purpose.</p>
 
-            <p>Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
+            <p class="location__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
 
-            <h4>Partners</h4>
+            <h4 class="location__subtitle">Partners</h4>
 
             <img src="..//weather/img/dropbox_logo.jpg" alt="">
 
             <img src="..//weather/img/evernote_logo.jpg" alt="">
         </div>
 
-        <div class="">
-            <img src="..//program/img/world_map.jpg" alt="">
+        <div class="location__wrap">
+            <img class="location__map" src="..//program/img/map.png" alt="">
         </div>
 
     </section>
