--- a/program/index.html
+++ b/program/index.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
 
-            <img class="header__logo" src="..//program/img/newprovidence.jpg" alt="">
+            <img class="header__logo" src="../program/img/newProvidence.png" alt="">
 
             <div class="header__right-menu">
                 <div class="header__information">
