--- a/program/index.html
+++ b/program/index.html
@@ -46,12 +46,12 @@
 
     <section class="testimonials">
 
-        <div class="testimonials__block">
+        <div class="testimonials__box">
             <img class="" src="" alt="">
 
             <h3 class="testimonials__title">Real-time all the time</h3>
 
-            <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
+            <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p><br>
 
             <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and
                 she at once took up the little golden key and hurried off to the garden door.</p>
@@ -60,10 +60,10 @@
         <div class="testimonials__block">
             <img src="" alt="">
 
-            <h3 class="testimonials__block">Adopt without any obstacles</h3>
+            <h3 class="testimonials__title">Adopt without any obstacles</h3>
 
             <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that
-                before!' she said.</p>
+                before!' she said.</p><br>
 
             <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such
                 abstruse matters.</p>
@@ -80,7 +80,7 @@
         <div class="about__content">
             <h2 class="about__title">Your day is protected</h2>
 
-            <p class="about__txt">There have not been any since we have lived here, said my mother. </p>
+            <p class="about__txt">There have not been any since we have lived here, said my mother. </p><br>
 
             <p class="about__txt">We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones,
                 and the birds have deserted them a long while.</p>
@@ -98,15 +98,15 @@
             <h2 class="location__title">We are almost everywhere</h2>
 
             <p class="location__txt">Now the races of these two have been for some ages utterly extinct, and besides to discourse any
-                further of them would not be at all to my purpose.</p>
+                further of them would not be at all to my purpose.</p><br>
 
             <p class="location__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
 
             <h4 class="location__subtitle">Partners</h4>
 
-            <img src="../program/img/dropbox.png" alt="">
+            <img class="location__img--drop" src="../program/img/dropbox.png" alt="">
 
-            <img src="../program/img/evernote.png" alt="">
+            <img class="location__img--ever" src="../program/img/evernote.png" alt="">
         </div>
 
         <div class="location__wrap">
@@ -119,7 +119,7 @@
 
         <div class="interface__wrap">
             <h2 class="interface__title">Beautiful Interface</h2>
-            <span class="interface__span">Landing Screen</span>
+            <h3 class="interface__subtitle">Landing Screen</h3>
         </div>
 
         <div class="interface__content">
