--- a/program/index.html
+++ b/program/index.html
@@ -157,7 +157,7 @@
            <input class="regisration__input" type="submit"  value="Send Invite">
         </form>
        
-        <span class="regisration__span">or Download From</span>
+        <span class="regisration__span">or Download From</span><br>
 
         <a class="regisration__link" href="">Download on the App Store</a>
 
