--- a/program/index.html
+++ b/program/index.html
@@ -225,7 +225,7 @@
 
             <p class="subscribe__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
 
-            <span class="subscribe__span">Have a bigger team? <a class="plan__link" href=""><strong>Let‘s talk</strong></a></span>
+            <span class="subscribe__span">Have a bigger team? <a class="subscribe__link" href="">Let‘s talk</a></span>
         </div>
 
         <div class="subscribe__starter starter">
