--- a/program/index.html
+++ b/program/index.html
@@ -270,7 +270,7 @@
 
         <form class="subscription__form" action="">
             <input class="subscription__mail" type="e-mail" placeholder="Your e-mail">
-            <input class="subscription__input" type="submit" value="Subscribe" >
+            <button class="subscription__btn">Subscribe</button>
         </form>
 
         <span class="subscription__span">We promise to never spam you.</span>
@@ -281,11 +281,11 @@
 
         <div class="footer__content">
 
-            <h4 class="footer__title"><span class="footer__span">new</span>providense</h4>
+           <img src="..//program/img/newProvidence.png" alt="">
 
             <p class="footer__txt">It was some time before he obtained any answer, and the reply, when made, was unpropitious.</p>
         
-           <a href=""><img src="../program/img/download.png" alt=""></a>
+           <a class="footer__link" href=""><img src="../program/img/download.png" alt=""></a>
 
             <div class="footer__box">
                 <ul class="footer__list">
@@ -312,7 +312,7 @@
         </div>
 
         <div class="footer__about">
-            <h4 class="about__title">About Us</h4>
+            <h4 class="about__title--bottom">About Us</h4>
             <ul class="about__list">
                 <li class="about__item">About us</li>
                 <li class="about__item"> Features</li>
@@ -331,11 +331,14 @@
             </ul>
         </div>
 
-        <span class="footer__span">For more freebies visit: <a class="footer__link" href="">http://getcraftwork.com</a></span>
+        <div class="footer__">
+         <span class="footer__span">For more freebies visit: <a class="footer__link" href="">http://getcraftwork.com</a></span>
 
         <span class="footer__">Made with Love by</span>
 
-        <img class="footer__icon" src="../program/img/logo.png" alt="">   
+        <img class="footer__icon" src="../program/img/logo.png" alt="">      
+        </div>
+        
 
     </footer>
 
