--- a/program/index.html
+++ b/program/index.html
@@ -50,80 +50,87 @@
 
     <section class="testimonials">
 
-        <div class="testimonials__box">
-            <img class="" src="" alt="">
+        <div class="testimonials__content">
+            <div class="testimonials__box">
 
-            <h3 class="testimonials__title">Real-time all the time</h3>
+                <h3 class="testimonials__title">Real-time all the time</h3>
 
-            <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the
-                trust I reposed in you.</p><br>
+                <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the
+                    trust I reposed in you.</p><br>
 
-            <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was now
-                more than nine feet high, and
-                she at once took up the little golden key and hurried off to the garden door.</p>
+                <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was now
+                    more than nine feet high, and
+                    she at once took up the little golden key and hurried off to the garden door.</p>
+            </div>
+
+            <div class="testimonials__block">
+
+                <h3 class="testimonials__title">Adopt without any obstacles</h3>
+
+                <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know it. 'I
+                    never thought of that
+                    before!' she said.</p><br>
+
+                <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the force
+                    of
+                    his reasoning upon such
+                    abstruse matters.</p>
+            </div>
         </div>
 
-        <div class="testimonials__block">
-            <img src="" alt="">
-
-            <h3 class="testimonials__title">Adopt without any obstacles</h3>
-
-            <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know it. 'I
-                never thought of that
-                before!' she said.</p><br>
-
-            <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the force of
-                his reasoning upon such
-                abstruse matters.</p>
-        </div>
 
     </section>
 
     <section class="about">
+        <div class="about__conteiner">
+            <div class="about__box">
+                <img class="about__img" src="..//program/img/iPhone6.png" alt="">
+            </div>
 
-        <div class="about__box">
-            <img class="about__img" src="..//program/img/iPhone6.png" alt="">
+            <div class="about__content">
+                <h2 class="about__title">Your day is protected</h2>
+
+                <p class="about__txt">There have not been any since we have lived here, said my mother.</p><br>
+
+                <p class="about__txt">We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests
+                    were very old ones,
+                    and the birds have deserted them a long while.</p>
+
+                <div class="about__wrap">
+                    <button class="about__btn">Try to hack us</button>
+
+                    <a class="about__link" href="">Learn more</a>
+                </div>
+
+            </div>
         </div>
-
-        <div class="about__content">
-            <h2 class="about__title">Your day is protected</h2>
-
-            <p class="about__txt">There have not been any since we have lived here, said my mother. </p><br>
-
-            <p class="about__txt">We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests
-                were very old ones,
-                and the birds have deserted them a long while.</p>
-
-            <button class="about__btn">Try to hack us</button>
-
-            <a class="about__link" href="">Learn more</a>
-        </div>
-
     </section>
 
     <section class="location">
+        <div class="location__inner">
+            <div class="location__content">
+                <h2 class="location__title">We are almost everywhere</h2>
 
-        <div class="location__content">
-            <h2 class="location__title">We are almost everywhere</h2>
+                <p class="location__txt">Now the races of these two have been for some ages utterly extinct, and besides
+                    to discourse any further of them would not be at all to my purpose.</p><br>
 
-            <p class="location__txt">Now the races of these two have been for some ages utterly extinct, and besides to
-                discourse any
-                further of them would not be at all to my purpose.</p><br>
+                <p class="location__txt">Thus much I thought proper to tell you in relation to yourself, and to the
+                    trust I reposed in you.</p>
 
-            <p class="location__txt">Thus much I thought proper to tell you in relation to yourself, and to the trust I
-                reposed in you.</p>
+                <h4 class="location__subtitle">Partners</h4>
 
-            <h4 class="location__subtitle">Partners</h4>
+                <div class="location__icon">
+                    <img class="location__img--drop" src="../program/img/dropbox.png" alt="">
 
-            <img class="location__img--drop" src="../program/img/dropbox.png" alt="">
+                    <img class="location__img--ever" src="../program/img/evernote.png" alt="">
+                </div>
 
-            <img class="location__img--ever" src="../program/img/evernote.png" alt="">
+            </div>
+
+            <div class="location__wrap">
+                <img class="location__map" src="..//program/img/map.png" alt="">
+            </div>
         </div>
-
-        <div class="location__wrap">
-            <img class="location__map" src="..//program/img/map.png" alt="">
-        </div>
-
     </section>
 
     <section class="interface">
