--- a/program/index.html
+++ b/program/index.html
@@ -124,12 +124,10 @@
 
                     <img class="location__img--ever" src="../program/img/evernote.png" alt="">
                 </div>
-
             </div>
 
-            <div class="location__wrap">
                 <img class="location__map" src="..//program/img/map.png" alt="">
-            </div>
+            
         </div>
     </section>
 
@@ -166,14 +164,17 @@
     </section>
 
     <section class="regisration">
-        <span class="regisration__name">NewProvidence</span>
+        <h4 class="registration__subtitle">NewProvidence</h4>
 
         <h2 class="regisration__title">Get it to your smartphone</h2>
 
-        <form class="regisration__form">
-            <input class="regisration__mail" type="e-mail" placeholder="denis@getcraftwork.com">
-            <input class="regisration__input" type="submit" value="Send Invite">
-        </form>
+        <div class="registration__wrap">
+            <form class="regisration__form">
+                <input class="regisration__input" type="e-mail" placeholder="denis@getcraftwork.com">
+                <button class="regisration__btn">Send Invite</button>
+            </form>
+        </div>
+        
 
         <span class="regisration__span">or Download From</span><br>
 
