--- a/program/index.html
+++ b/program/index.html
@@ -342,12 +342,10 @@
         </div>
 
         <div class="footer__bottom">
-            <span class="footer__span">For more freebies visit: <a class="footer__link"
+            <span class="footer__bottom-span">For more freebies visit: <a class="footer__bottom-link"
                     href="">http://getcraftwork.com</a></span>
 
-            <span class="footer__">Made with Love by</span>
-
-            <img class="footer__icon" src="../program/img/logo.png" alt="">
+            <span class="footer__end">Made with Love by</span>
         </div>
 
 
