--- a/program/index.html
+++ b/program/index.html
@@ -49,14 +49,14 @@
     </header>
 
     <section class="testimonials">
-
+<div class="container">
         <div class="testimonials__content">
             <div class="testimonials__box">
 
                 <h3 class="testimonials__title">Real-time all the time</h3>
 
                 <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the
-                    trust I reposed in you.</p><br>
+                    trust I reposed in you.</p>
 
                 <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was now
                     more than nine feet high, and
@@ -69,7 +69,7 @@
 
                 <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know it. 'I
                     never thought of that
-                    before!' she said.</p><br>
+                    before!' she said.</p>
 
                 <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the force
                     of
@@ -77,7 +77,7 @@
                     abstruse matters.</p>
             </div>
         </div>
-
+    </div>
 
     </section>
 
