--- a/program/index.html
+++ b/program/index.html
@@ -49,35 +49,39 @@
     </header>
 
     <section class="testimonials">
-<div class="container">
-        <div class="testimonials__content">
-            <div class="testimonials__box">
+        <div class="testimonials__container">
+            <div class="testimonials__content">
+                <div class="testimonials__box">
 
-                <h3 class="testimonials__title">Real-time all the time</h3>
+                    <h3 class="testimonials__title">Real-time all the time</h3>
 
-                <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to the
-                    trust I reposed in you.</p>
+                    <p class="testimonials__txt">Thus much I thought proper to tell you in relation to yourself, and to
+                        the
+                        trust I reposed in you.</p>
 
-                <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was now
-                    more than nine feet high, and
-                    she at once took up the little golden key and hurried off to the garden door.</p>
-            </div>
+                    <p class="testimonials__txt">Just then her head struck against the roof of the hall: in fact she was
+                        now
+                        more than nine feet high, and
+                        she at once took up the little golden key and hurried off to the garden door.</p>
+                </div>
 
-            <div class="testimonials__block">
+                <div class="testimonials__block">
 
-                <h3 class="testimonials__title">Adopt without any obstacles</h3>
+                    <h3 class="testimonials__title">Adopt without any obstacles</h3>
 
-                <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know it. 'I
-                    never thought of that
-                    before!' she said.</p>
+                    <p class="testimonials__txt">This sounded a very good reason, and Alice was quite pleased to know
+                        it. 'I
+                        never thought of that
+                        before!' she said.</p>
 
-                <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the force
-                    of
-                    his reasoning upon such
-                    abstruse matters.</p>
+                    <p class="testimonials__txt">This I have produced as a scantling of Jack’s great eloquence and the
+                        force
+                        of
+                        his reasoning upon such
+                        abstruse matters.</p>
+                </div>
             </div>
         </div>
-    </div>
 
     </section>
 
